# BP-MPC_improving_closed_loop_MPC_performance

./: .gitignore  LICENSE  LICENSE.md  README.md  comparison.ipynb  linear.py  main.ipynb  main_cart_pend.py  main_swingup.py  main_swingup_new.py  plots.ipynb  pyproject.toml  requirements.txt  test.py  tests.ipynb
BPMPC/: Ingredients.py  MPC.py  QP.py  UpperLevel.py  dynamics.py  dynamics_new.py  old.py  old_desctiptions.txt  options.py  plotter.py  scenario.py  simVar.py  symb.py  symb_tests.py  test.py  tests.py  upperLevel.py  utils.py
Examples/: cart_pend.py
examples/: example_random_linear_model.py  example_swingup.py  example_swingup_parallel_models.py  example_swingup_theta.py
main_files/: main_gros.py  main_swingup.py  main_swingup_theta.py  main_swingup_wrong_model.py  main_tests.py  nonlinear.py
myDiffQP/: MPC2QP.py  __init__.py  cleanup.py  diffQP.py  plotter.py  setup.py  simVar.py  testDiffQP.py
myScenarios/: __init__.py  linear_gd.py  linear_gd_2.py  linear_gn.py  nonlinearSlack.py  nonlinearSlackPenalized.py  nonlinear_gd.py  nonlinear_gd_2.py  nonlinear_gn.py  setup.py
src/: Ingredients.py  dynamics.py  ingredients.py  options.py  plotter.py  qp.py  scenario.py  simVar.py  sim_var.py  symb.py  symbolic_var.py  upper_level.py  utils.py
tests/: TODO_test_derivatives.py  dynamics_tests.py  sample_elements.py  symb_tests.py  test_derivatives.py  test_dynamics.py  test_ingredients.py  test_mpc.py  test_parallel_derivatives.py  test_qp.py  test_symb.py  test_sys_id.py  test_upper_level.py  tests.py
tinkering/: testing.py  (+2 more)
utils/: cleanup.py  (+6 more)
(+4 files in other folders)
