[project]
name = "bpmpc"
version = "1.0.0"
authors = [
  { name="Riccardo Zuliani", email="rzuliani@ethz.com" },
]
description = "A package to automatically improve the performance of MPC using differentiable optimization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/RiccardoZuliani98/BP-MPC_improving_closed_loop_MPC_performance"
Issues = "https://github.com/RiccardoZuliani98/BP-MPC_improving_closed_loop_MPC_performance/issues"